--- a/ComputerVision/src/MainFrame.form
+++ b/ComputerVision/src/MainFrame.form
@@ -94,7 +94,7 @@
                               <Group type="103" groupAlignment="0" attributes="0">
                                   <Group type="102" attributes="0">
                                       <Component id="analyzeSourceImageLabel" min="-2" max="-2" attributes="0"/>
-                                      <EmptySpace min="0" pref="437" max="32767" attributes="0"/>
+                                      <EmptySpace min="0" pref="647" max="32767" attributes="0"/>
                                   </Group>
                                   <Component id="analyzeImage" max="32767" attributes="0"/>
                                   <Component id="analyzeCaptionLabel" alignment="0" max="32767" attributes="0"/>
@@ -139,7 +139,7 @@
                       </Group>
                       <EmptySpace max="-2" attributes="0"/>
                       <Group type="103" groupAlignment="0" attributes="0">
-                          <Component id="analyzeScrollPane" pref="404" max="32767" attributes="0"/>
+                          <Component id="analyzeScrollPane" pref="417" max="32767" attributes="0"/>
                           <Group type="102" attributes="0">
                               <Component id="analyzeImage" max="32767" attributes="0"/>
                               <EmptySpace max="-2" attributes="0"/>
@@ -252,7 +252,7 @@
                                       <Component id="landmarkSourceImageLabel" min="-2" max="-2" attributes="0"/>
                                   </Group>
                               </Group>
-                              <EmptySpace min="0" pref="423" max="32767" attributes="0"/>
+                              <EmptySpace min="0" pref="516" max="32767" attributes="0"/>
                           </Group>
                       </Group>
                       <EmptySpace min="-2" pref="10" max="-2" attributes="0"/>
@@ -279,7 +279,7 @@
                       </Group>
                       <EmptySpace max="-2" attributes="0"/>
                       <Group type="103" groupAlignment="0" attributes="0">
-                          <Component id="landmarkScrollPane" pref="408" max="32767" attributes="0"/>
+                          <Component id="landmarkScrollPane" pref="420" max="32767" attributes="0"/>
                           <Group type="102" attributes="0">
                               <Component id="landmarkImage" max="32767" attributes="0"/>
                               <EmptySpace max="-2" attributes="0"/>
@@ -379,7 +379,7 @@
                                       <Component id="celebritiesImageButton" min="-2" max="-2" attributes="0"/>
                                   </Group>
                               </Group>
-                              <EmptySpace min="0" pref="431" max="32767" attributes="0"/>
+                              <EmptySpace min="0" pref="590" max="32767" attributes="0"/>
                           </Group>
                           <Group type="102" alignment="0" attributes="0">
                               <Group type="103" groupAlignment="0" attributes="0">
@@ -421,7 +421,7 @@
                       </Group>
                       <EmptySpace max="-2" attributes="0"/>
                       <Group type="103" groupAlignment="0" attributes="0">
-                          <Component id="celebritiesScrollPane" pref="408" max="32767" attributes="0"/>
+                          <Component id="celebritiesScrollPane" pref="420" max="32767" attributes="0"/>
                           <Group type="102" attributes="0">
                               <Component id="celebritiesImage" max="32767" attributes="0"/>
                               <EmptySpace max="-2" attributes="0"/>
@@ -529,7 +529,7 @@
                               </Group>
                           </Group>
                       </Group>
-                      <EmptySpace pref="10" max="32767" attributes="0"/>
+                      <EmptySpace pref="240" max="32767" attributes="0"/>
                       <Group type="103" groupAlignment="0" attributes="0">
                           <Component id="thumbnailImage" min="-2" pref="100" max="-2" attributes="0"/>
                           <Component id="thumbnailThumbnailLabel" min="-2" max="-2" attributes="0"/>
@@ -563,7 +563,7 @@
                           <Component id="thumbnailSourceImage" max="32767" attributes="0"/>
                           <Group type="102" alignment="0" attributes="0">
                               <Component id="thumbnailImage" min="-2" pref="150" max="-2" attributes="0"/>
-                              <EmptySpace min="0" pref="258" max="32767" attributes="0"/>
+                              <EmptySpace min="0" pref="270" max="32767" attributes="0"/>
                           </Group>
                       </Group>
                       <EmptySpace max="-2" attributes="0"/>
@@ -652,6 +652,24 @@
                   <Group type="102" attributes="0">
                       <EmptySpace max="-2" attributes="0"/>
                       <Group type="103" groupAlignment="0" attributes="0">
+                          <Group type="102" alignment="0" attributes="0">
+                              <Group type="103" groupAlignment="0" attributes="0">
+                                  <Component id="ocrScrollPane" alignment="0" min="-2" pref="400" max="-2" attributes="0"/>
+                                  <Component id="ocrResponseLabel" alignment="0" min="-2" max="-2" attributes="0"/>
+                              </Group>
+                              <EmptySpace type="unrelated" max="-2" attributes="0"/>
+                              <Group type="103" groupAlignment="0" attributes="0">
+                                  <Group type="102" attributes="0">
+                                      <Component id="ocrSourceImageLabel" min="-2" max="-2" attributes="0"/>
+                                      <EmptySpace max="32767" attributes="0"/>
+                                  </Group>
+                                  <Group type="102" attributes="0">
+                                      <Component id="ocrImage" pref="448" max="32767" attributes="0"/>
+                                      <EmptySpace type="unrelated" max="-2" attributes="0"/>
+                                      <Component id="jScrollPane1" min="-2" pref="281" max="-2" attributes="0"/>
+                                  </Group>
+                              </Group>
+                          </Group>
                           <Group type="102" attributes="0">
                               <Group type="103" groupAlignment="0" attributes="0">
                                   <Component id="ocrTitleLabel" alignment="0" min="-2" max="-2" attributes="0"/>
@@ -664,24 +682,9 @@
                                       <Component id="ocrImageButton" min="-2" max="-2" attributes="0"/>
                                   </Group>
                               </Group>
-                              <EmptySpace min="0" pref="0" max="32767" attributes="0"/>
-                          </Group>
-                          <Group type="102" alignment="0" attributes="0">
-                              <Group type="103" groupAlignment="0" attributes="0">
-                                  <Component id="ocrScrollPane" alignment="0" min="-2" pref="400" max="-2" attributes="0"/>
-                                  <Component id="ocrResponseLabel" alignment="0" min="-2" max="-2" attributes="0"/>
-                              </Group>
-                              <EmptySpace type="unrelated" max="-2" attributes="0"/>
-                              <Group type="103" groupAlignment="0" attributes="0">
-                                  <Group type="102" attributes="0">
-                                      <Component id="ocrSourceImageLabel" min="-2" max="-2" attributes="0"/>
-                                      <EmptySpace pref="447" max="32767" attributes="0"/>
-                                  </Group>
-                                  <Component id="ocrImage" max="32767" attributes="0"/>
-                              </Group>
+                              <EmptySpace max="-2" attributes="0"/>
                           </Group>
                       </Group>
-                      <EmptySpace max="-2" attributes="0"/>
                   </Group>
               </Group>
             </DimensionLayout>
@@ -705,10 +708,15 @@
                       </Group>
                       <EmptySpace max="-2" attributes="0"/>
                       <Group type="103" groupAlignment="0" attributes="0">
-                          <Component id="ocrImage" max="32767" attributes="0"/>
-                          <Component id="ocrScrollPane" pref="408" max="32767" attributes="0"/>
+                          <Group type="102" attributes="0">
+                              <Group type="103" groupAlignment="0" attributes="0">
+                                  <Component id="ocrImage" max="32767" attributes="0"/>
+                                  <Component id="ocrScrollPane" pref="420" max="32767" attributes="0"/>
+                              </Group>
+                              <EmptySpace max="-2" attributes="0"/>
+                          </Group>
+                          <Component id="jScrollPane1" max="32767" attributes="0"/>
                       </Group>
-                      <EmptySpace max="-2" attributes="0"/>
                   </Group>
               </Group>
             </DimensionLayout>
@@ -770,6 +778,31 @@
             </Container>
             <Component class="javax.swing.JLabel" name="ocrImage">
             </Component>
+            <Container class="javax.swing.JScrollPane" name="jScrollPane1">
+              <AuxValues>
+                <AuxValue name="autoScrollPane" type="java.lang.Boolean" value="true"/>
+              </AuxValues>
+
+              <Layout class="org.netbeans.modules.form.compat2.layouts.support.JScrollPaneSupportLayout"/>
+              <SubComponents>
+                <Component class="javax.swing.JList" name="jList1">
+                  <Properties>
+                    <Property name="model" type="javax.swing.ListModel" editor="org.netbeans.modules.form.editors2.ListModelEditor">
+                      <StringArray count="5">
+                        <StringItem index="0" value="Item 1"/>
+                        <StringItem index="1" value="Item 2"/>
+                        <StringItem index="2" value="Item 3"/>
+                        <StringItem index="3" value="Item 4"/>
+                        <StringItem index="4" value="Item 5"/>
+                      </StringArray>
+                    </Property>
+                  </Properties>
+                  <AuxValues>
+                    <AuxValue name="JavaCodeGenerator_TypeParameters" type="java.lang.String" value="&lt;String&gt;"/>
+                  </AuxValues>
+                </Component>
+              </SubComponents>
+            </Container>
           </SubComponents>
         </Container>
         <Container class="javax.swing.JPanel" name="handwritingPanel">
@@ -810,7 +843,7 @@
                               <Group type="103" groupAlignment="0" attributes="0">
                                   <Group type="102" attributes="0">
                                       <Component id="handwritingSourceImageLabel" min="-2" max="-2" attributes="0"/>
-                                      <EmptySpace pref="447" max="32767" attributes="0"/>
+                                      <EmptySpace pref="653" max="32767" attributes="0"/>
                                   </Group>
                                   <Component id="handwritingImage" max="32767" attributes="0"/>
                               </Group>
@@ -841,7 +874,7 @@
                       <EmptySpace max="-2" attributes="0"/>
                       <Group type="103" groupAlignment="0" attributes="0">
                           <Component id="handwritingImage" max="32767" attributes="0"/>
-                          <Component id="handwritingScrollPane" pref="408" max="32767" attributes="0"/>
+                          <Component id="handwritingScrollPane" pref="420" max="32767" attributes="0"/>
                       </Group>
                       <EmptySpace max="-2" attributes="0"/>
                   </Group>
