--- a/ComputerVision/src/MainFrame.form
+++ b/ComputerVision/src/MainFrame.form
@@ -652,15 +652,6 @@
                   <Group type="102" attributes="0">
                       <EmptySpace max="-2" attributes="0"/>
                       <Group type="103" groupAlignment="0" attributes="0">
-                          <Component id="ocrTitleLabel" alignment="0" min="-2" max="-2" attributes="0"/>
-                          <Component id="ocrInstructionLabel" alignment="0" min="-2" max="-2" attributes="0"/>
-                          <Group type="102" alignment="0" attributes="0">
-                              <Component id="ocrImagePromptLabel" min="-2" max="-2" attributes="0"/>
-                              <EmptySpace max="-2" attributes="0"/>
-                              <Component id="ocrImageUriTextBox" min="-2" pref="240" max="-2" attributes="0"/>
-                              <EmptySpace max="-2" attributes="0"/>
-                              <Component id="ocrImageButton" min="-2" max="-2" attributes="0"/>
-                          </Group>
                           <Group type="102" alignment="0" attributes="0">
                               <Group type="103" groupAlignment="0" attributes="0">
                                   <Component id="ocrScrollPane" alignment="0" min="-2" pref="400" max="-2" attributes="0"/>
@@ -679,6 +670,22 @@
                                   </Group>
                               </Group>
                           </Group>
+                          <Group type="102" attributes="0">
+                              <Group type="103" groupAlignment="0" attributes="0">
+                                  <Component id="ocrTitleLabel" alignment="0" min="-2" max="-2" attributes="0"/>
+                                  <Component id="ocrInstructionLabel" alignment="0" min="-2" max="-2" attributes="0"/>
+                                  <Group type="102" alignment="0" attributes="0">
+                                      <Component id="ocrImagePromptLabel" min="-2" max="-2" attributes="0"/>
+                                      <EmptySpace max="-2" attributes="0"/>
+                                      <Component id="ocrImageUriTextBox" min="-2" pref="240" max="-2" attributes="0"/>
+                                      <EmptySpace max="-2" attributes="0"/>
+                                      <Component id="ocrImageButton" min="-2" max="-2" attributes="0"/>
+                                      <EmptySpace max="-2" attributes="0"/>
+                                      <Component id="fileBrowseButton" min="-2" max="-2" attributes="0"/>
+                                  </Group>
+                              </Group>
+                              <EmptySpace min="0" pref="0" max="32767" attributes="0"/>
+                          </Group>
                       </Group>
                       <EmptySpace max="-2" attributes="0"/>
                   </Group>
@@ -696,6 +703,7 @@
                           <Component id="ocrImagePromptLabel" alignment="3" min="-2" max="-2" attributes="0"/>
                           <Component id="ocrImageUriTextBox" alignment="3" min="-2" max="-2" attributes="0"/>
                           <Component id="ocrImageButton" alignment="3" min="-2" max="-2" attributes="0"/>
+                          <Component id="fileBrowseButton" alignment="3" min="-2" max="-2" attributes="0"/>
                       </Group>
                       <EmptySpace max="-2" attributes="0"/>
                       <Group type="103" groupAlignment="3" attributes="0">
@@ -792,6 +800,14 @@
                 </Component>
               </SubComponents>
             </Container>
+            <Component class="javax.swing.JButton" name="fileBrowseButton">
+              <Properties>
+                <Property name="text" type="java.lang.String" value="Browse For File"/>
+              </Properties>
+              <Events>
+                <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="browseClicked"/>
+              </Events>
+            </Component>
           </SubComponents>
         </Container>
         <Container class="javax.swing.JPanel" name="handwritingPanel">
